--- a/scss/style.scss
+++ b/scss/style.scss
@@ -673,6 +673,7 @@ input:focus, select:focus, textarea:focus {
 
 .xxx5 {
   border-bottom: none;
+  border-left: none;
   margin-top: 0;
   margin-bottom: 0;
   padding: 0 0 5rem 0;
@@ -1121,9 +1122,26 @@ li.menu_category:hover:after{
   display: flex;
   color: white;
   height: 50vh;
-  div{
+  div {
     flex-basis: 33%;
     font-size: 18px;
+    }
+  }
+  .menu_category{
+    ul{
+      li:hover:after {
+        content: "";
+        background-image: url(../src/img/main/r_arrow.svg);
+        background-size: 10px 10px;
+        box-sizing: border-box;
+        height: 10px;
+        width: 10px;
+        position: relative;
+        bottom: 0;
+        left: 9px;
+        display: inline-block;
+        transition: all 500ms;
+      }
   }
   .menu_subcategory{
     font-size: 16px;
@@ -1401,7 +1419,7 @@ li.menu_category:hover:after{
           width: 100%;
           max-width: 700px;
           height: auto;
-          transform: translate(15%, 50px);
+          transform: translate(13%, 50px);
 
         }
     }
@@ -1543,6 +1561,7 @@ li.menu_category:hover:after{
       }
     }
   }
+
 
 //ABOUT US PAGE
 
@@ -2168,6 +2187,10 @@ height: 200px;
   }
 }
 
+.mobile_our_works {
+  display: none;
+}
+
 
 // SUBCATEGORY
 .category_wrapper {
@@ -2325,6 +2348,10 @@ height: 200px;
         transform: rotate(45deg) translateY(40px);
       }
     }
+
+    .mob_portfolio {
+      display: none;
+    }
   }
   .tab_control_container {
     display: flex;
@@ -2344,7 +2371,7 @@ height: 200px;
       font-family: Rubik;
     }
     .btn:hover {
-      color: #e9150b;
+      color: #F54B19;
     }
     .active2{
       color: #e9150b;
@@ -2464,7 +2491,7 @@ height: 200px;
 .works_container{
   display: flex;
   flex-direction: column;
-
+  margin: 0 15rem;
   .works_wrapper{
     display: flex;
     justify-content: space-around;
@@ -2474,11 +2501,10 @@ height: 200px;
     .img_wrapper{
       display: flex;
       position: relative;
-      flex-basis: 33%;
       flex-direction: column;
-      width: 450px;
+      width: 464px;
       max-height: 300px;
-      margin: 2.5px 0;
+      margin: 5px;
 
       img {
         height: 100%;
@@ -2963,16 +2989,18 @@ margin-top: 150px;
   position: relative;
   height: 50%;
 
-  img {
+  iframe {
     position: relative;
     z-index: 1;
+    width: 600px;
+    height: 450px;
   }
 }
   .contact_map:after{
     content: "";
     position: absolute;
-    bottom: 0;
-    right: 50px;
+    bottom: -25px;
+    right: 85px;
     height: 262px;
     width: 262px;
     background: repeating-linear-gradient(45deg, transparent, transparent 10px, #fff 10px, #fff 12px);
@@ -3068,6 +3096,14 @@ align-items: center;
   // Portfolio
   .portfolio_wrapper .portfolio .xxx1 {
     margin: 5rem 8rem 2rem;
+  }
+
+  .works_container {
+    margin: 0 8rem;
+  }
+  .portfolio_wrapper .portfolio .triangles {
+    left: 60px;
+    top: 0;
   }
   .certificate_wrapper .certificate .gallery_item img {
     width: 340px;
@@ -3578,6 +3614,16 @@ align-items: center;
   .portfolio_bottom {
     overflow: hidden;
   }
+  .works_container {
+    margin: 0 5rem;
+  }
+  .blog_top_container {
+    div{
+      .fs48_r {
+        margin-left: 6rem;
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 1280px) {
@@ -3997,6 +4043,10 @@ align-items: center;
   }
   .footer_form_border {
     width: 575px;
+  }
+  footer .footer_top .footer_top_right .contact_map iframe {
+    width: 420px;
+    height: 300px;
   }
 
 
@@ -4561,6 +4611,8 @@ align-items: center;
     margin: 3rem 3rem;
     //border: none;
   }
+
+
   .main_service_container .xxx1::after {
     border: none;
   }
@@ -4586,6 +4638,7 @@ align-items: center;
   }
   .xxx5 {
     margin: 0 3rem;
+    border-left: none;
   }
   .xxx1::before {
     display: none;
@@ -4649,6 +4702,21 @@ align-items: center;
     align-items: center;
   }
   //SERVICE
+  .service_wrapper .menu_category ul li {
+    position: relative;
+  }
+
+  //SERVICE IPAD TRIANGLES
+  .service_wrapper .menu_category ul li:after{
+    content: '';
+    position: absolute;
+    bottom: 10px;
+    margin-left: 10px;
+    border-style: solid;
+    border-width: 8px 5px 0 5px;
+    border-color: #ffffff transparent transparent transparent;
+    transform: rotate(30deg);
+  }
   .main_service_wrapper .menu_service_img img {
     width: 300px;
   }
@@ -4732,6 +4800,12 @@ align-items: center;
   }
   footer .footer_bottom .footer_social div {
    margin-right:0;
+  }
+
+
+  footer .footer_top .footer_top_right .contact_map iframe {
+    width: 350px;
+    transform: translate(15px, -15px);
   }
 
   //PORTFOLIO
@@ -5174,8 +5248,21 @@ align-items: center;
 
     .dropdown_container{
       font-size: 16px;
-      margin: 20px 0;
+      margin: 10px 0;
     }
+  }
+
+  .mobile_category_menu ul li span {
+    position: relative;
+  }
+  .mobile_category_menu ul li span:after {
+    content: '';
+    position: absolute;
+    bottom: 6px;
+    margin-left: 10px;
+    border-style: solid;
+    border-width: 8px 5px 0 5px;
+    border-color: #ffffff transparent transparent transparent;
   }
   .menu_category, .menu_subcategory{
     display: none;
@@ -5327,7 +5414,7 @@ align-items: center;
   }
   footer .footer_top .footer_top_left .footer_form_wrapper .footer_form {
     width: 100%;
-    padding: 4rem 0;
+    padding: 1rem 0;
     background-color: #ffffff;
     margin-top: 0;
   }
@@ -5335,6 +5422,7 @@ align-items: center;
     padding: 2% 5%;
   }
   footer .footer_top .footer_top_left .footer_triangles {
+    display: none;
     position: absolute;
     left: 0;
     top: 0;
@@ -5349,11 +5437,27 @@ align-items: center;
   footer .footer_bottom .footer_social div p{
     padding-left: 25px;
   }
+  footer .footer_top .footer_top_right .footer_contacts .f_contacts {
+    margin: 12px 0;
+    width: 100%;
+  }
+  footer .footer_top .footer_top_right .contact_map iframe {
+    width: 100%;
+    transform: translate(0, 0);
+  }
   .f_btn {
     align-self: center;
   }
   .adv_btn {
     margin-top: 25px;
+    font-size: 16px;
+    padding: 15px 40px;
+  }
+  .btn-2 {
+    height: 45px;
+    max-width: 150px;
+    font-size: 16px;
+    align-self: center;
   }
 
   //ABOUT US
@@ -5456,7 +5560,7 @@ align-items: center;
     display: none;
   }
   .main_our_works {
-    margin-top: 65px;
+    margin-top: 40px;
   }
   .certificate_wrapper {
     padding-bottom: 55px;
@@ -5511,11 +5615,10 @@ align-items: center;
     background-color: black;
     color: white;
   }
+
   //Portfolio
   .portfolio_wrapper .tab_control_container {
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-items: flex-start;
+    display: none;
   }
 
   .wrapper-dropdown-3 {
@@ -5681,6 +5784,13 @@ align-items: center;
     }
   }
 
+  .works_container {
+    margin: 0 25px;
+  }
+  .works_container .works_wrapper .img_wrapper {
+   margin: 5px 0;
+  }
+
   //News
   .news_wrapper .subcategory_fix {
     display: flex;
@@ -5738,9 +5848,8 @@ align-items: center;
   .blog_wrapper .subcategory_fix {
     height: 27vh;
   }
+
   //Blog
-
-
   .blog .blog_top_container {
     justify-content: center;
   }
@@ -5760,6 +5869,10 @@ align-items: center;
     transform: translateX(-7px);
     top: -5px;
   }
+  .blog .blog_top_container .triangles img:last-child {
+    transform: translateY(0px);
+  }
+
   .blog_top_img_container::after {
     height: 171px;
     width: 171px;
@@ -5779,6 +5892,7 @@ align-items: center;
   .xxx9::before {
     display: none;
   }
+
   //Category
   .category_container .xxx1 {
     padding: 2rem 0;
@@ -5788,10 +5902,16 @@ align-items: center;
 
     .category_container {
       margin: 0 25px;
+
+      .slogan_wrapper {
+        margin: 0;
+      }
     }
   }
   .category_wrapper .slogan_wrapper .subcategory_list {
     align-self: auto;
+    flex-direction: column;
+    margin-top: 10px;
   }
   .category_wrapper .category_top_container .category_top_triangles img:first-child {
     transform: none;
@@ -5800,7 +5920,8 @@ align-items: center;
     top: 205px;
   }
   .category_wrapper .category_top_container .category_top_triangles {
-    bottom: -40px;
+      bottom: -90px;
+      right: -70px;
   }
   .category_container .service_triangles img:last-child {
     width: 40px;
@@ -5824,7 +5945,6 @@ align-items: center;
   }
   .category_wrapper .category_top_container {
     margin-bottom: 65px;
-    margin-left: 2em;
   }
   .category_wrapper .slogan_wrapper {
     position: relative;
@@ -5839,6 +5959,34 @@ align-items: center;
     height: 100%;
   }
 
+  .adb_slider {
+    display: none ;
+  }
+  .mobile_our_works {
+    display: flex;
+    flex-direction: column;
+
+    div {
+      margin: 5px 25px;
+      img {
+        width: 100%;
+
+      }
+    }
+  }
+  .xxx7 .service_wrapper .menu_service_img::after {
+   bottom: -30px;
+  }
+
+  .category_fix {
+    .exodus_triangle {
+      display: none;
+    }
+  }
+  .category_fix2 {
+    height: 100%;
+  }
+
   .slogan_wrapper{
     margin: 0 25px;
   }
@@ -5849,8 +5997,8 @@ align-items: center;
     margin: 0;
   }
   .slogan_wrapper .subcategory_img_container div img {
-    width: 300px;
-    height: 205px;
+    width: 100%;
+    height: 210px;
   }
   .slogan_wrapper .subcategory_img_container::after {
     left: -50px;
@@ -5862,6 +6010,75 @@ align-items: center;
   .sub_service_wrapper {
     display: none;
   }
+
+  footer .footer_bottom .footer_social div:first-child {
+    margin-right: 50px;
+  }
+
+
+  // MOBILE PORTFOLIO SELECT
+
+  .portfolio_wrapper .portfolio .mob_portfolio {
+    display: block;
+    margin: 0 0.6em;
+    ul {
+      li:first-child:after {
+        content: '';
+        position: relative;
+        bottom: -17px;
+        margin-left: 16%;
+        border-style: solid;
+        border-width: 8px 5px 0 5px;
+        border-color: #ffffff transparent transparent transparent;
+      }
+    }
+  }
+
+
+  .portfolio_wrapper .modal-content {
+    width: 100%;
+  }
+  .portfolio_wrapper .mySlides img{
+    height: 100vh!important;
+  }
+  .portfolio_wrapper .modal {
+    padding-top: 60px;
+  }
+  .portfolio_wrapper .close {
+    top: 10%;
+  }
+  .portfolio_bottom .o_bg {
+    width: 270px;
+    height: 250px;
+  }
+  .portfolio_bottom .w_lines {
+    width: 75px;
+    height: 75px;
+    bottom: 25px;
+    right: -15px;
+  }
+  .select ul li.option {
+    //background-color: #DEDEDE;
+    box-shadow: 0 1px 0 #DEDEDE, 0 0 0 #DEDEDE;
+
+  }
+  .select ul li.option {
+    z-index: 1;
+    color: white;
+    font-size: 18px;
+    padding: 5px;
+    display: none;
+    list-style: none;
+  }
+
+  .select ul li:first-child {
+    display: block;
+  }
+
+  .select ul li {
+    cursor: default;
+  }
+
 }
 
 @media only screen and (max-width: 414px) {
@@ -5943,8 +6160,8 @@ align-items: center;
     min-width: 320px;
   }
   .main_our_works {
-    margin-top: 65px;
-    margin-bottom: 65px;
+    margin-top: 50px;
+    //margin-bottom: 65px;
   }
   .blog .blog_top_container .triangles {
     display: none;
